// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runKitApprentissageImporter > should import Kit Apprentissage multiple_files source 1`] = `
[
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "ING",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": null,
      "FicheRNCP": "RNCP1997",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.0.csv",
    "version": "20200414",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "ING",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": null,
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.0.csv",
    "version": "20200414",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "ING",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": null,
      "FicheRNCP": "RNCP5912",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.0.csv",
    "version": "20200414",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "ING",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": null,
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.1.csv",
    "version": "20200507",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "ING",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": null,
      "FicheRNCP": "RNCP1997",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.1.csv",
    "version": "20200507",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "ING",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": null,
      "FicheRNCP": "RNCP5912",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.1.csv",
    "version": "20200507",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "ING",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": null,
      "FicheRNCP": "RNCP1997",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.2.csv",
    "version": "20200525",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "ING",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": null,
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.2.csv",
    "version": "20200525",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "ING",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": null,
      "FicheRNCP": "RNCP5912",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.2.csv",
    "version": "20200525",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": null,
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.3.csv",
    "version": "20201116",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.3",
      "Fiche ACTIVE/INACTIVE": null,
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.3.csv",
    "version": "20201116",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "TP",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "56T23207",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.3",
      "Fiche ACTIVE/INACTIVE": null,
      "FicheRNCP": "RNCP25720",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "CONSTRUCTEUR BOIS (TP)",
      "Niveau fiche RNCP": "niveau3",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.3.csv",
    "version": "20201116",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.4.csv",
    "version": "20201218",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.3",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.4.csv",
    "version": "20201218",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "TP",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "56T23207",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.3",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP25720",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "CONSTRUCTEUR BOIS (TP)",
      "Niveau fiche RNCP": "niveau3",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.4.csv",
    "version": "20201218",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.5.csv",
    "version": "20210302",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.3",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.5.csv",
    "version": "20210302",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "TP",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "56T23207",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.3",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP25720",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "CONSTRUCTEUR BOIS (TP)",
      "Niveau fiche RNCP": "niveau3",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.5.csv",
    "version": "20210302",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.6.csv",
    "version": "20210330",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.3",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.6.csv",
    "version": "20210330",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "TP",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "56T23207",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.6",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP35507",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "CONSTRUCTEUR BOIS (TP)",
      "Niveau fiche RNCP": "niveau3",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.6.csv",
    "version": "20210330",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.7.csv",
    "version": "20210503",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.3",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.7.csv",
    "version": "20210503",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "TP",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "56T23207",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.6",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP35507",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "CONSTRUCTEUR BOIS (TP)",
      "Niveau fiche RNCP": "niveau3",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.7.csv",
    "version": "20210503",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.8.csv",
    "version": "20210602",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.3",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.8.csv",
    "version": "20210602",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "TP",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "56T23207",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.6",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP35507",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "CONSTRUCTEUR BOIS (TP)",
      "Niveau fiche RNCP": "niveau3",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.8.csv",
    "version": "20210602",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.9.csv",
    "version": "20210707",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.3",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.9.csv",
    "version": "20210707",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "TP",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": null,
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "56T23207",
      "Date d'échéance de la fiche RNCP": null,
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.6",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP35507",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "CONSTRUCTEUR BOIS (TP)",
      "Niveau fiche RNCP": "niveau3",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v1.9.csv",
    "version": "20210707",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": "01/01/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v2.0.csv",
    "version": "20210914",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "TP",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "56T23207",
      "Date d'échéance de la fiche RNCP": "26/04/2026",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.6",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP35507",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "CONSTRUCTEUR BOIS (TP)",
      "Niveau fiche RNCP": "niveau3",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v2.0.csv",
    "version": "20210914",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": "01/01/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v2.1.csv",
    "version": "20211019",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": "01/01/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v2.2.csv",
    "version": "20211215",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": "01/01/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v2.3.csv",
    "version": "20220126",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": "01/01/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v2.4.csv",
    "version": "20220331",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": "01/01/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v2.5.csv",
    "version": "20220518",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": "01/01/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v2.6.csv",
    "version": "20220705",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": "01/01/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v2.7.csv",
    "version": "20220908",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": "01/01/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v2.8.csv",
    "version": "20221121",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": "01/01/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v2.9.csv",
    "version": "20230223",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "TITRE",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "46X33608",
      "Date d'échéance de la fiche RNCP": "29/09/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.9",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP36906",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "PRATICIEN EN MASSAGES BIEN-ETRE (EIS)",
      "Niveau fiche RNCP": "niveau4",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v2.9.csv",
    "version": "20230223",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": "01/01/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "niveau7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v3.0.csv",
    "version": "20230619",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": null,
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "46X33608",
      "Date d'échéance de la fiche RNCP": "29/09/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.9",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP36906",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "PRATICIEN EN MASSAGES BIEN-ETRE (EIS)",
      "Niveau fiche RNCP": "niveau4",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit apprentissage et RNCP v3.0.csv",
    "version": "20230619",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "Niveau 7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.csv",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": null,
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "46X33608",
      "Date d'échéance de la fiche RNCP": "21/12/2026",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "CI-09012024",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP38447",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "PRATICIEN EN MASSAGES BIEN-ETRE (EIS)",
      "Niveau fiche RNCP": "Niveau 4",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.csv",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": "RNCP1997",
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": "Titre ingénieur - Ingénieur diplômé de l’Institut supérieur d'agriculture Rhône-Alpes (IsaraLyon), titre d’ingénieur conférant le grade de Master -Master’s degree-",
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "Niveau 7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": "Enregistrement de droit",
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240223.csv",
    "version": "20240223",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": null,
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": "RNCP36906",
      "Code Diplôme": "46X33608",
      "Date d'échéance de la fiche RNCP": "21/12/2026",
      "Date de début des parcours certifiants": null,
      "Date de décision": "21/12/2023",
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": "21/12/2030",
      "Dernière MaJ": "CI-09012024",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP38447",
      "Intitulé certification (RNCP)": "Praticien en massages bien-être",
      "Intitulé diplôme (DEPP)": "PRATICIEN EN MASSAGES BIEN-ETRE (EIS)",
      "Niveau fiche RNCP": "Niveau 4",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": "Enregistrement sur demande",
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240223.csv",
    "version": "20240223",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": "RNCP1997",
      "Code Diplôme": "17021006",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v2.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP11532",
      "Intitulé certification (RNCP)": "Titre ingénieur - Ingénieur diplômé de l’Institut supérieur d'agriculture Rhône-Alpes (IsaraLyon), titre d’ingénieur conférant le grade de Master -Master’s degree-",
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE RHONE-ALPES",
      "Niveau fiche RNCP": "Niveau 7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": "Enregistrement de droit",
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240329.csv",
    "version": "20240329",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": null,
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": "RNCP36906",
      "Code Diplôme": "46X33608",
      "Date d'échéance de la fiche RNCP": "21/12/2026",
      "Date de début des parcours certifiants": null,
      "Date de décision": "21/12/2023",
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": "21/12/2030",
      "Dernière MaJ": "CI-09012024",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP38447",
      "Intitulé certification (RNCP)": "Praticien en massages bien-être",
      "Intitulé diplôme (DEPP)": "PRATICIEN EN MASSAGES BIEN-ETRE (EIS)",
      "Niveau fiche RNCP": "Niveau 4",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": "Enregistrement sur demande",
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240329.csv",
    "version": "20240329",
  },
]
`;

exports[`runKitApprentissageImporter > should import Kit Apprentissage single_file source 1`] = `
[
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Licence Professionnelle",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "25031012",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP30111",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "METIERS DE LA QUALITE (LP TOULON)",
      "Niveau fiche RNCP": "Niveau 6",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.csv",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Licence Professionnelle",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "25024104",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP30110",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "METIERS DE LA MODE (LP NIMES)",
      "Niveau fiche RNCP": "Niveau 6",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.csv",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": null,
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "16X31062",
      "Date d'échéance de la fiche RNCP": "20/07/2027",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "V2.8",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP36741",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "EXPERT EN CONTROLE DE GESTION, AUDIT ET GESTION DE SYSTEME D'INFORMATION (MS SKEMA BUSINESS SCHOOL)",
      "Niveau fiche RNCP": "Niveau 7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.csv",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Licence Professionnelle",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "25022158",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP30113",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "METIERS DE LA SANTE : NUTRITION, ALIMENTATION (LP RENNES 1)",
      "Niveau fiche RNCP": "Niveau 6",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.csv",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "MASTER",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "13511109",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP31803",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "CHIMIE (MASTER GRENOBLE ALPES)",
      "Niveau fiche RNCP": "Niveau 7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.csv",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Licence Professionnelle",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "25022204",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP30050",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "CHIMIE : FORMULATION (LP TOULOUSE 3)",
      "Niveau fiche RNCP": "Niveau 6",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.csv",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021004",
      "Date d'échéance de la fiche RNCP": "01/01/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "INACTIVE",
      "FicheRNCP": "RNCP29277",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE YNCREA HAUTS-DE-FRANCE",
      "Niveau fiche RNCP": "Niveau 7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.csv",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "non",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17032620",
      "Date d'échéance de la fiche RNCP": "31/08/2026",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.2",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP36416",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'ECOLE SUPERIEURE D'INGENIEURS DE RENNES DE L'UNIVERSITE RENNES 1, SPECIALITE TECHNOLOGIES DE L'INFORMATION",
      "Niveau fiche RNCP": "Niveau 7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.csv",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Licence Professionnelle",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "25022154",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP30074",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INDUSTRIES AGROALIMENTAIRES : GESTION, PRODUCTION ET VALORISATION (LP CNAM)",
      "Niveau fiche RNCP": "Niveau 6",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.csv",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "DGE_GM",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "15531005",
      "Date d'échéance de la fiche RNCP": "31/08/2019",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "INACTIVE",
      "FicheRNCP": "RNCP27423",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "DIPLOME GRADE MASTER DE PARIS DAUPHINE : MANAGEMENT INTERNATIONAL",
      "Niveau fiche RNCP": "Niveau 7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.csv",
    "version": "20240119",
  },
]
`;

exports[`runKitApprentissageImporter > should import XLSX file 1`] = `
[
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Licence Professionnelle",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "25031012",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP30111",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "METIERS DE LA QUALITE (LP TOULON)",
      "Niveau fiche RNCP": "Niveau 6",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.xlsx",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Licence Professionnelle",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "25024104",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP30110",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "METIERS DE LA MODE (LP NIMES)",
      "Niveau fiche RNCP": "Niveau 6",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.xlsx",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": null,
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "16X31062",
      "Date d'échéance de la fiche RNCP": "20/07/2027",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "V2.8",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP36741",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "EXPERT EN CONTROLE DE GESTION, AUDIT ET GESTION DE SYSTEME D'INFORMATION (MS SKEMA BUSINESS SCHOOL)",
      "Niveau fiche RNCP": "Niveau 7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.xlsx",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Licence Professionnelle",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "25022158",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP30113",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "METIERS DE LA SANTE : NUTRITION, ALIMENTATION (LP RENNES 1)",
      "Niveau fiche RNCP": "Niveau 6",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.xlsx",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "MASTER",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "13511109",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP31803",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "CHIMIE (MASTER GRENOBLE ALPES)",
      "Niveau fiche RNCP": "Niveau 7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.xlsx",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Licence Professionnelle",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "25022204",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP30050",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "CHIMIE : FORMULATION (LP TOULOUSE 3)",
      "Niveau fiche RNCP": "Niveau 6",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.xlsx",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17021004",
      "Date d'échéance de la fiche RNCP": "01/01/2024",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "INACTIVE",
      "FicheRNCP": "RNCP29277",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'INSTITUT SUPERIEUR D'AGRICULTURE YNCREA HAUTS-DE-FRANCE",
      "Niveau fiche RNCP": "Niveau 7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.xlsx",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "non",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17032620",
      "Date d'échéance de la fiche RNCP": "31/08/2026",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.2",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP36416",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'ECOLE SUPERIEURE D'INGENIEURS DE RENNES DE L'UNIVERSITE RENNES 1, SPECIALITE TECHNOLOGIES DE L'INFORMATION",
      "Niveau fiche RNCP": "Niveau 7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.xlsx",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Licence Professionnelle",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "25022154",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP30074",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "INDUSTRIES AGROALIMENTAIRES : GESTION, PRODUCTION ET VALORISATION (LP CNAM)",
      "Niveau fiche RNCP": "Niveau 6",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.xlsx",
    "version": "20240119",
  },
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "DGE_GM",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "15531005",
      "Date d'échéance de la fiche RNCP": "31/08/2019",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "INACTIVE",
      "FicheRNCP": "RNCP27423",
      "Intitulé certification (RNCP)": null,
      "Intitulé diplôme (DEPP)": "DIPLOME GRADE MASTER DE PARIS DAUPHINE : MANAGEMENT INTERNATIONAL",
      "Niveau fiche RNCP": "Niveau 7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": null,
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240119.xlsx",
    "version": "20240119",
  },
]
`;

exports[`runKitApprentissageImporter > should support june 2024 new sheets 1`] = `
[
  {
    "_id": "ObjectId",
    "data": {
      "Abrégé de diplôme (RNCP)": "Titre ingénieur",
      "Accès à l'apprentissage de la fiche RNCP (oui/non)": "oui",
      "Ancienne Certification (RNCP)": null,
      "Code Diplôme": "17020031",
      "Date d'échéance de la fiche RNCP": "01/01/2025",
      "Date de début des parcours certifiants": null,
      "Date de décision": null,
      "Date de publication de la fiche": null,
      "Date limite de la délivrance": null,
      "Dernière MaJ": "v1.0",
      "Fiche ACTIVE/INACTIVE": "ACTIVE",
      "FicheRNCP": "RNCP12738",
      "Intitulé certification (RNCP)": "Titre ingénieur - Ingénieur diplômé de l’Institut polytechnique de Grenoble, Ecole nationale supérieure de génie industriel",
      "Intitulé diplôme (DEPP)": "INGENIEUR DIPLOME DE L'ECOLE NATIONALE SUPERIEURE DE GENIE INDUSTRIEL DE L'INSTITUT POLYTECHNIQUE DE GRENOBLE",
      "Niveau fiche RNCP": "Niveau 7",
      "Nouvelle Certification rempla (RNCP)": null,
      "Type d'enregistrement": "Enregistrement de droit",
    },
    "date": 2023-04-08T22:00:00.000Z,
    "source": "Kit_apprentissage_20240625.xlsx",
    "version": "20240625",
  },
]
`;
